<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp">


    <TextView
        android:id="@+id/hi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="19sp"
        android:letterSpacing="0.02"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:text="@string/hello" />

    <TextView
        android:id="@+id/permission_detail_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat"
        android:letterSpacing="0.02"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/hi"
        android:text="@string/permission_detail" />
    <TextView
        android:id="@+id/permission_detail_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_bold"
        android:letterSpacing="0.02"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/permission_detail_1"
        android:text="@string/permission_detail_2" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/requestPermission"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@id/permission_detail_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/white"
        android:text="@string/ok"
        app:cornerRadius="15dp"
        app:backgroundTint="#42A5F5"/>
</androidx.constraintlayout.widget.ConstraintLayout>