<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/act_splash_screen_scene"
    tools:context=".activities.SplashScreen">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:translationY="-30dp"
        app:srcCompat="@drawable/ic_walltone"
        android:contentDescription="@string/logo"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:translationY="-30dp"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signInLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="300dp"
        app:layout_constraintTop_toBottomOf="@id/app_name">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="50dp"
            android:background="@color/divider"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <com.excessivemedia.walltone.widgets.GoogleSignIn
            android:id="@+id/googleSignInButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/googleSignInButton"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardElevation="1dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="center"
                android:fontFamily="@font/montserrat"
                android:text="@string/or" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:fontFamily="@font/montserrat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv"
            android:layout_marginTop="10dp"
            android:textColor="@color/blue"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.motion.widget.MotionLayout>