<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Upload">

    <TextView
        android:id="@+id/uploadTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/upload_wallpapers"
        android:gravity="center"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:padding="5dp"/>

    <com.excessivemedia.walltone.widgets.GalleryView.Gallery
        android:id="@+id/uploadRecyclerView"
        app:layout_constraintTop_toBottomOf="@id/uploadTV"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white"
        android:contentDescription="@string/add" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:text="@string/upload"
        app:cornerRadius="10dp"
        app:backgroundTint="#42A5F5"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:layout_margin="30dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>